--- a/src/app/hero/hero.scss
+++ b/src/app/hero/hero.scss
@@ -61,7 +61,7 @@
 
     .text-wrapper {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         gap: 10px;
         justify-content: center;
     }
